--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
     "live-server": "^1.2.2",
     "nodemon": "^2.0.16",
     "socket.io": "^4.5.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yash-Khokhar/CHAT-APPLICATION.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Yash-Khokhar/CHAT-APPLICATION/issues"
+  },
+  "homepage": "https://github.com/Yash-Khokhar/CHAT-APPLICATION#readme"
 }
